force-app/main/default/objects/Competitive_Intelligence__c/Competitive_Intelligence__c.object-meta.xml
<CustomObject>
    <label>Competitive Intelligence</label>
    <nameField>
        <label>Competitive Intelligence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitive Intelligences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>