force-app/main/default/objects/Competitive_Intelligence__c/fields/Competitor_Activities__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Activities__c</fullName>
    <label>Competitor Activities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>