force-app/main/default/objects/Competitive_Intelligence__c/fields/Inspection_Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Product_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Product Item</label>
    <referenceTo>Inspection_Product_Item__c</referenceTo>
    <relationshipLabel>Competitive Intelligences</relationshipLabel>
    <relationshipName>Competitive_Intelligences</relationshipName>
    <type>Lookup</type>
</CustomField>