force-app/main/default/objects/Competitive_Intelligence__c/fields/Photos_Competitive__c.field-meta.xml
<CustomField>
    <fullName>Photos_Competitive__c</fullName>
    <label>Photos Competitive</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>