force-app/main/default/objects/Competitive_Intelligence__c/fields/Total_Number_Of_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Competitors__c</fullName>
    <label>Total Number Of Competitors</label>
    <length>20</length>
    <type>Text</type>
</CustomField>